--- a/views/userHome.ejs
+++ b/views/userHome.ejs
@@ -39,7 +39,7 @@
           <div class="card iot" style="width:300px">
           <img class="card-img-top" src="/img/<%=item%>.jpg" alt="Card image">
           <div class="card-body">
-           <h4 class="card-title"><%item%></h4>
+           <h4 class="card-title"><%=item%></h4>
            <p class="card-text">Some example text.</p>
            <a href="#" class="btn btn-primary">Start</a>
           </div>
@@ -49,7 +49,7 @@
              <div class="card iot" style="width:300px">
              <img class="card-img-top" src="/img/<%=item%>.jpg" alt="Card image">
              <div class="card-body">
-              <h4 class="card-title"><%item%></h4>
+              <h4 class="card-title"><%=item%></h4>
               <p class="card-text">Some example text.</p>
               <a href="#" class="btn btn-primary">Start</a>
              </div>
