--- a/views/about.ejs
+++ b/views/about.ejs
@@ -18,19 +18,16 @@
   </head>
   <body>
 
-    <header class="header-area">
+    <header >
 
-        <div class="top-header">
-            <div class="container h-100">
-                <div class="row h-100">
+        <div >
+            <div>
+                <div class="row">
                     <div class="col-8">
-                        <div class="h-100">
                             <div class="academy-logo">
                                 <a href="/">
                                   <img src="https://fontmeme.com/permalink/200216/10843b6f348116246a3c9e1f6dde371e.png" alt="web-LOgo" class="logo-img" border="0"></a>
                             </div>
-
-                        </div>
                     </div>
                     <div class="col-4">
                       <div class="login-content">
@@ -94,7 +91,8 @@
 
     </header>
 
-   <br><br><br><br></br>
+   <br><br><br><br>
+
    <div class="jumbotron">
      <h1 class="aboutUs">About Us</h1>
      <hr style="width:40%; color:yellow; " class="pd-5">
