--- a/views/userHome.ejs
+++ b/views/userHome.ejs
@@ -63,9 +63,9 @@
             <div class="row kkk">
               <div class="col-2">
                 <% if(user.gender === 'male') { %>
-                <img src="/img/man.png" class="gen-img" alt="img">
+                <img src="/img/man.png" class="pp" alt="img">
                 <% } else { %>
-                <img src="/img/female.png" class="gen-img" alt="img">
+                <img src="/img/female.png" class="pp" alt="img">
                 <% } %>
               </div>
               <div class="col-2">
