--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,7 +21,20 @@
 .not-und:hover{
   text-decoration: none;
 }
-
+.w{
+  height: 10%;
+}
+.we{
+  font-size: 20px;
+  font-weight: bolder;
+  font-family: serif;
+  color: white;
+}
+.we:hover{
+  color: white;
+  text-shadow: 1px 2px 1px black;
+  text-decoration: none;
+}
 .navitt{
   left:13%;
   top:13%;
@@ -42,6 +55,12 @@
   position: fixed;
   top: 0;
   width: 100%;
+}
+#blok1{
+  display: none;
+}
+#blok{
+  display: none;
 }
 .nav-link{
   font-size: 20px;
